# LinuxApplicationDevelopment2022

01_GitBuildReq/: hello.c
02_TerminalProject/: Show.c
03_Multifile/: Makefile
04_Text/: randomize.sh
05_Debugging/: Makefile  fiveScenario.gdb  range.c  secondScenario.gdb
06_Regexps/: Makefile  esub.c
07_TracingFencing/: Makefile  PROTECT_test_LD_PRELOAD.txt  extra_remove.c  move.c
09_I18n/: README.md  configure.ac
09_I18n/po/: POTFILES.in  ru.po
09_I18n/src/: Makefile.am  guessNumber.c  guessnumber.c
